--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,8 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^5.0.1",
-    "@google-cloud/storage": "^5.16.1",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "multer": "^1.4.4"
+    "express": "^4.17.2"
   }
 }
