--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
   "permissions": [
     "webRequest",
     "tabs",
-    "storage",
-    "scripting"
+    "storage"
   ],
   "host_permissions": [
     "https://*/*"
@@ -42,7 +41,6 @@
   ],
   "options_page": "options.html",
   "action": {
-    "default_popup": "popup.html",
     "default_icon": {
       "16": "./icons/favicon-16x16.png",
       "48": "./icons/favicon-16x16.png",
